#13 actus et mise a jour commissions

--- a/_commissions/jardin.html
+++ b/_commissions/jardin.html
@@ -3,4 +3,13 @@ layout: commission
 symbol: jardin
 ---
 
+---
+
+Elle met régulièrement en place un espace d'échange de graines et de plantes durant la Nuit Debout.
+
+Elle a organisé un jardin temporaire Place des Vosges où chacun pouvait venir planter et partager, sur une journée.
+
+Un atelier "Bombes à graines" (boules de terre remplie de graines de légumes et de fleurs des champs) a été mené permettant à chacun de fabriquer des bombes et de les lancer où bon lui semble.
+
+Cette commission travaille en convergence avec de nombreuses associations locales, notamment avec des jardins partagés.
 
