fix home page layout

--- a/index.html
+++ b/index.html
@@ -30,8 +30,36 @@ image:
         {% endfor %}
       </div>
       <a class="btn btn-primary pull-right" href="{{ domain }}/actus/" title="Voir toutes les actus">Voir toutes les actus</a>
+      <div class="clearfix"></div>
     </section>
+
+    <section>
+  <h2>Avoir plus d'infos et participer</h2>
+  <p> Si vous souhaitez vous impliquer, n'hésitez pas à nous rejoindre place des Vosges<br> ou à nous contacter via twitter, facebook, email !</p>
+  <div class="center">
+    <a class="btn btn-primary" href="{{ domain }}/commissions/">Contacter et participer aux commissions </a>
   </div>
+  <ul class="list link-list">
+    <li>
+      <span class="link-title">Mail contact : </span>
+      <a href="mailto:nuitdebout.epinal@openmailbox.org">nuitdebout.epinal@openmailbox.org</a>
+    </li>
+  </ul>
+  <ul class="list link-list">
+    {% for link in site.data.nde-links %}
+    <li>
+      <span class="link-title">{{link.title}} : </span>
+      <a href="{{link.url}}">{{link.url}}</a>
+    </li>
+    {% endfor %}
+  </ul>
+
+</section>
+  </div>
+
+
+
+
 
   <div class="col-4">
     {% assign current_time = site.time | date: "%s" %}
@@ -98,26 +126,5 @@ image:
 
 
 
-<section>
-  <h2>Avoir plus d'infos et participer</h2>
-  <p> Si vous souhaitez vous impliquer, n'hésitez pas à nous rejoindre place des Vosges<br> ou à nous contacter via twitter, facebook, email !</p>
-  <div class="center">
-    <a class="btn btn-primary" href="{{ domain }}/commissions/">Contacter et participer aux commissions </a>
-  </div>
-  <ul class="list link-list">
-    <li>
-      <span class="link-title">Mail contact : </span>
-      <a href="mailto:nuitdebout.epinal@openmailbox.org">nuitdebout.epinal@openmailbox.org</a>
-    </li>
-  </ul>
-  <ul class="list link-list">
-    {% for link in site.data.nde-links %}
-    <li>
-      <span class="link-title">{{link.title}} : </span>
-      <a href="{{link.url}}">{{link.url}}</a>
-    </li>
-    {% endfor %}
-  </ul>
 
-</section>
 
