adding casseroles + txt fanny + credits photos

--- a/_commissions/jardin.html
+++ b/_commissions/jardin.html
@@ -13,3 +13,6 @@ Un atelier "Bombes à graines" (boules de terre remplie de graines de légumes e
 
 Cette commission travaille en convergence avec de nombreuses associations locales, notamment avec des jardins partagés.
 
+---
+
+*Photos : Emmanuelle Lescouët*
